--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
-  "name": "discord-utils",
-  "title": "discord utils",
+  "name": "raycast-discord-utils",
+  "title": "raycast-discord utils",
   "description": "Discord utils",
   "icon": "command-icon.png",
   "author": "uzimaru0000",
@@ -27,22 +27,57 @@
       "title": "test",
       "description": "Discord mute",
       "mode": "no-view"
+    },
+    {
+      "name": "clear",
+      "title": "clear",
+      "description": "Discord mute",
+      "mode": "no-view"
+    }
+  ],
+  "preferences": [
+    {
+      "name": "clientId",
+      "title": "Client Id",
+      "description": "discord app client id",
+      "type": "textfield",
+      "required": true
+    },
+    {
+      "name": "clientSecret",
+      "title": "Client Secret",
+      "description": "discord app client secret",
+      "type": "textfield",
+      "required": true
+    },
+    {
+      "name": "authorizePort",
+      "title": "Authorize Port",
+      "description": "discord authorize redirect port",
+      "type": "textfield",
+      "default": "3000",
+      "required": false
     }
   ],
   "dependencies": {
     "@honojs/node-server": "^0.1.3",
     "@raycast/api": "^1.44.0",
     "discord-rpc": "^4.0.1",
+    "express": "^4.18.2",
     "hono": "^2.6.2",
     "is-running": "^2.1.0",
+    "log4js": "^6.7.1",
     "node-fetch": "2",
     "open": "^8.4.0",
+    "ps-node": "^0.1.6",
     "ps-tree": "^1.2.0"
   },
   "devDependencies": {
     "@types/discord-rpc": "^4.0.3",
+    "@types/express": "^4.17.15",
     "@types/node": "18.8.3",
     "@types/node-fetch": "^2.6.2",
+    "@types/ps-node": "^0.1.1",
     "@types/ps-tree": "^1.1.2",
     "@types/react": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
