--- a/package.json
+++ b/package.json
@@ -61,17 +61,12 @@
     }
   ],
   "dependencies": {
-    "@honojs/node-server": "^0.1.3",
     "@raycast/api": "^1.44.0",
     "discord-rpc": "^4.0.1",
     "express": "^4.18.2",
-    "hono": "^2.6.2",
-    "is-running": "^2.1.0",
-    "log4js": "^6.7.1",
     "node-fetch": "2",
     "open": "^8.4.0",
-    "ps-node": "^0.1.6",
-    "ps-tree": "^1.2.0"
+    "ps-node": "^0.1.6"
   },
   "devDependencies": {
     "@types/discord-rpc": "^4.0.3",
@@ -79,7 +74,6 @@
     "@types/node": "18.8.3",
     "@types/node-fetch": "^2.6.2",
     "@types/ps-node": "^0.1.1",
-    "@types/ps-tree": "^1.1.2",
     "@types/react": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
